[gd_scene load_steps=23 format=3 uid="uid://d2fac2xibuh1b"]

[ext_resource type="Theme" uid="uid://bvvhkciajx7vs" path="res://themes/base.tres" id="1_iqqha"]
[ext_resource type="Shader" path="res://tween.gdshader" id="4_5diq2"]
[ext_resource type="Texture2D" uid="uid://ccbrk3xcvf5gv" path="res://assets/stars/adastral.svg" id="5_dbn8e"]
[ext_resource type="Script" path="res://main.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://bjvrgo2shmf48" path="res://assets/icons/about.png" id="6_0rhqe"]
[ext_resource type="FontFile" uid="uid://cknx8yer7op7k" path="res://fonts/HankenGrotesk.ttf" id="6_e4w67"]
[ext_resource type="Texture2D" uid="uid://ceom1bckqrqap" path="res://assets/icons/download.svg" id="7_cdmsw"]
[ext_resource type="Texture2D" uid="uid://c5na4nwipcjcg" path="res://assets/icons/home.svg" id="8_en8bg"]
[ext_resource type="Shader" path="res://rounded.gdshader" id="9_ife38"]
[ext_resource type="Texture2D" uid="uid://b21fcl1p2qpc8" path="res://assets/icons/settings.png" id="9_oabdq"]
[ext_resource type="Texture2D" uid="uid://u3sxv4ed2sfv" path="res://assets/backgrounds/game/tf2c-bg.jpg" id="12_x24cb"]
[ext_resource type="Texture2D" uid="uid://01foylgwqogg" path="res://assets/backgrounds/game/of-bg.jpg" id="13_1kq8w"]
[ext_resource type="Texture2D" uid="uid://diee7uq3voana" path="res://assets/backgrounds/adastral-256.svg" id="14_hwo7l"]
[ext_resource type="FontFile" uid="uid://pskwpwxk0pd4" path="res://fonts/HankenGrotesk-SemiBold.ttf" id="15_m18sp"]
[ext_resource type="Script" path="res://starspin.gd" id="16"]
[ext_resource type="Texture2D" uid="uid://ck55k7hw0jfn0" path="res://assets/wordmarks/game/of_wordmark_trimmed.png" id="16_krwbs"]
[ext_resource type="Texture2D" uid="uid://dpkhwf8y3a5at" path="res://assets/mockup.png" id="20_17qi8"]

[sub_resource type="FontVariation" id="FontVariation_qo1cp"]
base_font = ExtResource("6_e4w67")
spacing_glyph = -1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_spum4"]
shader = ExtResource("4_5diq2")
shader_parameter/weight = null
shader_parameter/alpha = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fdqvn"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.168627)
shadow_size = 6

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r15we"]
shader = ExtResource("9_ife38")
shader_parameter/radius = 18.0
shader_parameter/weight = 1.0
shader_parameter/target_texture = ExtResource("12_x24cb")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ikao0"]
shader = ExtResource("4_5diq2")
shader_parameter/weight = null
shader_parameter/alpha = 1.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_iqqha")

[node name="Main" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("6")

[node name="TopPanel" type="Panel" parent="Main"]
layout_mode = 0
offset_right = 770.0
offset_bottom = 350.0
theme_type_variation = &"TopPanel"

[node name="Adastral" type="Label" parent="Main/TopPanel"]
layout_mode = 0
offset_left = 61.0
offset_top = 13.0
offset_right = 150.0
offset_bottom = 49.0
theme_type_variation = &"TopLabels"
theme_override_fonts/font = SubResource("FontVariation_qo1cp")
theme_override_font_sizes/font_size = 25
text = "Adastral"

[node name="AdastralLogo" type="TextureRect" parent="Main/TopPanel"]
material = SubResource("ShaderMaterial_spum4")
layout_mode = 0
offset_left = 12.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 47.0
texture = ExtResource("5_dbn8e")
expand_mode = 1

[node name="AboutButton" type="TextureButton" parent="Main/TopPanel"]
layout_mode = 0
offset_left = 679.0
offset_top = 13.0
offset_right = 711.0
offset_bottom = 45.0
theme_type_variation = &"TopButton"
texture_normal = ExtResource("6_0rhqe")
ignore_texture_size = true
stretch_mode = 0

[node name="DownloadTab" type="TextureButton" parent="Main/TopPanel"]
layout_mode = 0
offset_left = 635.0
offset_top = 13.0
offset_right = 667.0
offset_bottom = 45.0
theme_type_variation = &"TopButton"
texture_normal = ExtResource("7_cdmsw")
ignore_texture_size = true
stretch_mode = 0

[node name="HomeButton" type="TextureButton" parent="Main/TopPanel"]
layout_mode = 0
offset_left = 591.0
offset_top = 14.0
offset_right = 623.0
offset_bottom = 46.0
theme_type_variation = &"TopButton"
texture_normal = ExtResource("8_en8bg")
ignore_texture_size = true
stretch_mode = 0

[node name="AdvancedButton" type="TextureButton" parent="Main/TopPanel"]
layout_mode = 0
offset_left = 724.0
offset_top = 14.0
offset_right = 756.0
offset_bottom = 46.0
theme_type_variation = &"TopButton"
action_mode = 0
texture_normal = ExtResource("9_oabdq")
ignore_texture_size = true
stretch_mode = 0

[node name="Adastral2" type="Label" parent="Main/TopPanel"]
layout_mode = 0
offset_left = 525.0
offset_top = 14.0
offset_right = 589.0
offset_bottom = 49.0
theme_type_variation = &"TopLabels"
theme_override_fonts/font = ExtResource("15_m18sp")
theme_override_font_sizes/font_size = 22
text = "v0.0.1"

[node name="GradientBar" type="Panel" parent="Main/TopPanel"]
visible = false
layout_mode = 0
offset_top = 64.0
offset_right = 770.0
offset_bottom = 68.0
theme_type_variation = &"GradientBar"

[node name="Panel2" type="Panel" parent="Main"]
layout_mode = 0
offset_left = 81.0
offset_top = 61.0
offset_right = 780.0
offset_bottom = 268.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fdqvn")
metadata/_edit_group_ = true

[node name="Background" type="TextureRect" parent="Main/Panel2"]
material = SubResource("ShaderMaterial_r15we")
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 709.0
offset_bottom = 214.0
texture = ExtResource("13_1kq8w")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="Main"]
modulate = Color(1, 1, 1, 0.243137)
layout_mode = 0
offset_left = 217.0
offset_top = 70.0
offset_right = 597.0
offset_bottom = 450.0
pivot_offset = Vector2(190, 190)
texture = ExtResource("14_hwo7l")
expand_mode = 1
stretch_mode = 5
script = ExtResource("16")

[node name="Panel" type="Panel" parent="Main"]
visible = false
layout_mode = 0
offset_left = -171.0
offset_top = 568.0
offset_right = 29.0
offset_bottom = 1258.0
rotation = -1.5708
theme_type_variation = &"BigGrad"

[node name="BottomPanel" type="Panel" parent="Main"]
layout_mode = 2
offset_left = 80.0
offset_top = 272.0
offset_right = 770.0
offset_bottom = 350.0
theme_type_variation = &"AccentPanel"

[node name="SidePanel" type="Panel" parent="Main"]
layout_mode = 0
offset_top = 60.0
offset_right = 67.0
offset_bottom = 350.0
theme_type_variation = &"SidePanel"

[node name="HBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 2
offset_top = 74.0
offset_right = 67.0
offset_bottom = 350.0
size_flags_vertical = 3

[node name="GameText" type="RichTextLabel" parent="Main"]
visible = false
layout_mode = 0
offset_left = 64.0
offset_top = 67.0
offset_right = 785.0
offset_bottom = 118.0
theme_type_variation = &"PositiveRTL"
theme_override_font_sizes/normal_font_size = 25
theme_override_font_sizes/bold_font_size = 25
bbcode_enabled = true
text = "[b]Welcome to Adastral! [/b]Select a game to install."

[node name="LatestVersion" type="RichTextLabel" parent="Main"]
layout_mode = 0
offset_left = 85.0
offset_top = 283.0
offset_right = 304.0
offset_bottom = 315.0
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[right]Latest Version: [b]2.1.3[/b]"
scroll_active = false

[node name="InstalledVersion" type="RichTextLabel" parent="Main"]
layout_mode = 0
offset_left = 89.0
offset_top = 309.0
offset_right = 330.0
offset_bottom = 335.0
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[right]Installed Version: [b]2.1.2[/b]"
scroll_active = false

[node name="Path3D" type="Label" parent="Main"]
visible = false
layout_mode = 0
offset_left = 72.0
offset_top = 301.0
offset_right = 535.0
offset_bottom = 328.0
theme_override_font_sizes/font_size = 18
text = "Installing to: /this/is/a/very/long/directory/open_fortress"

[node name="ProgressBar" type="ProgressBar" parent="Main"]
layout_mode = 0
offset_left = 80.0
offset_top = 260.0
offset_right = 770.0
offset_bottom = 272.0
value = 50.0
show_percentage = false

[node name="Install" type="Button" parent="Main"]
layout_mode = 0
offset_left = 647.0
offset_top = 289.0
offset_right = 761.0
offset_bottom = 335.0
theme_type_variation = &"ImportantButton"
theme_override_font_sizes/font_size = 22
text = "Install"

[node name="Verify" type="Button" parent="Main"]
layout_mode = 0
offset_left = 505.0
offset_top = 289.0
offset_right = 638.0
offset_bottom = 335.0
theme_override_font_sizes/font_size = 22
text = "Verify"

[node name="Wordmark" type="TextureRect" parent="Main"]
material = SubResource("ShaderMaterial_ikao0")
layout_mode = 0
offset_left = 85.0
offset_top = 155.0
offset_right = 485.0
offset_bottom = 255.0
theme_type_variation = &"WMPanel"
texture = ExtResource("16_krwbs")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.537255)
layout_mode = 0
offset_right = 770.0
offset_bottom = 350.0
texture = ExtResource("20_17qi8")
expand_mode = 1

[connection signal="change_to" from="Main" to="Main/HBoxContainer" method="_on_Main_change_to"]
[connection signal="pressed" from="Main/TopPanel/AboutButton" to="Main" method="_on_AboutButton_pressed"]
[connection signal="pressed" from="Main/TopPanel/DownloadTab" to="Main" method="_on_AboutButton_pressed"]
[connection signal="pressed" from="Main/TopPanel/HomeButton" to="Main" method="_on_HomeButton_pressed"]
[connection signal="pressed" from="Main/TopPanel/AdvancedButton" to="Main" method="_on_Button4_pressed"]
